# prefect-workflows

./: Dockerfile  Jenkinsfile  LICENSE  README.md  prefect.yaml  pyproject.toml  requirements.txt
docs/: architecture.md
scripts/: setup_jenkins_prefect.sh
src/automations/: __init__.py
src/automations/flows/: __init__.py  check_multiple_websites.py  example_flow.py
src/automations/utils/: __init__.py
